# Kubix

./: .dir-locals.el  CMakeLists.txt  INSTALL  Makefile  Makefile.def  README  README.md  doxy.conf  res.qrc  textures.txt
doc/: dicestates.txt
include/: controller.hpp  engine.h  engine.hpp  gui.hpp  gui_opengl.hpp  handler.hpp  models.hpp  rating.hpp  tools.hpp
server/: kubix.php  php_standalone.sh
src/: CMakeLists.txt  Makefile  config.cpp  config.hpp  controller.cpp  engine.cpp  engine.hpp  eventHandler.cpp  game_widget.cpp  game_widget.hpp  global.hpp  gui.cpp  gui_opengl.cpp  gui_opengl.hpp  handler.hpp  kubix.cpp  main_window.cpp  main_window.hpp  models.cpp  models.hpp  new_game_dialog.cpp  new_game_dialog.hpp  preferences_dialog.cpp  preferences_dialog.hpp  serialization.cpp  tools.cpp  tools.hpp
src/controller/: Makefile  controller.cpp
src/engine/: Makefile  controller.c  controller.h  dicestates.h  engine.c  engine.cpp  engine.h  rating.c  rating.cpp  rating.h
src/eventHandler/: Makefile  handler.cpp
src/gui/: Makefile  gui.cpp
src/tools/: Makefile  tools.cpp
tests/: crash1.kbx
ui/: aboutDialog.ui  mainWindow.ui  newGameDialog.ui  preferencesDialog.ui
